[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "hmp"
version = "0.3.2"
authors = [
  { name="Gabriel Weindel", email="gabriel.weindel@gmail.com" },
  { name="Leendert van Maanen", email="e@mail.com" },
  { name="Jelmer Borst", email="e@mail.com" },
]
description = "Package for fitting Hidden Multivariate pattern model to time-series"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
]
dependencies=["mne >=1.0.0",
"numpy",
"xarray >= 2023.8.0",
"scikit-learn",
"statsmodels",
"scipy",
"netcdf4",
"seaborn",
"more_itertools",
"ipywidgets",
"nibabel"]


keywords = [
    "neuroscience",
    "neuroimaging",
    "MEG",
    "EEG",
    "ECoG",
    "brain",
]

[tool.hatch.build]
exclude = [
    "/.*",
    "/*.npy",
    "/*.fif",
    "/*.toml",
    "/*.txt",
    "/plots",
    "/tutorials",
] 

[project.urls]
"Homepage" = "https://github.com/GWeindel/hmp"
"Bug Tracker" = "https://github.com/GWeindel/hmp/issues"
