[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]

name = "hmp"
authors = [
  { name="Gabriel Weindel", email="gabriel.weindel@gmail.com" },
  { name="Leendert van Maanen", email="e@mail.com" },
  { name="Jelmer Borst", email="e@mail.com" },
]
description = "Package for fitting Hidden Multivariate pattern model to time-series"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
]
dependencies=["mne >=1.0.0",
"numpy",
"xarray >= 2023.8.0",
"scikit-learn",
"statsmodels",
"scipy",
"netcdf4",
"more_itertools",
"ipywidgets",
"nibabel"]

dynamic = ["version"]

keywords = [
    "neuroscience",
    "neuroimaging",
    "MEG",
    "EEG",
    "ECoG",
    "brain",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/GWeindel/hmp"
"Bug Tracker" = "https://github.com/GWeindel/hmp/issues"

[tool.setuptools]
packages = ["hmp"]
obsoletes = ["hsmm_mvpy"]

[tool.setuptools_scm]
write_to = "hmp/_version.py"


[tool.ruff]
exclude = ["_version.py", "experimental.py"]
line-length = 100
lint.select = ["E", "F", "W", "I", "N", "D", "PL", "ARG"]
lint.ignore = ["PLR2004", "D107", "D105", "D102"]

# [tool.ruff.lint.pep8-naming]
# ignore-names = ["a", "b", "mu"]

[tool.ruff.lint.pylint]
max-args=10
max-locals=35

[tool.ruff.lint.pydocstyle]
convention="numpy"